manifests/node.selective-access.yml
# Let’s update our policy to allow only host1 to access the customer node port:
---
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: nodeport-policy
spec:
  order: 100
  selector: has(kubernetes.io/hostname)
  applyOnForward: true
  preDNAT: true
  ingress:
  - action: Allow
    protocol: TCP
    destination:
      ports: [30180]
    source:
      nets:
      - 192.168.64.9/32
      - 192.168.64.10/32
      - 192.168.64.11/32
  - action: Deny
    protocol: TCP
    destination:
      ports: ["30000:32767"]
  - action: Deny
    protocol: UDP
    destination:
      ports: ["30000:32767"]

# calicoctl apply -f ../node.selective-access.yml
